/*
Copyright 2025 Supabase, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

// This file contains the RPC service definition for multipooler backup operations.

syntax = "proto3";

package multipoolerbackupservice;

option go_package = "github.com/multigres/multigres/go/pb/multipoolerbackupservice";

// MultiPoolerBackupService provides backup and restore operations
service MultiPoolerBackupService {
  // Backup performs a backup
  rpc Backup(BackupRequest) returns (BackupResponse);

  // RestoreFromBackup restores from a backup
  rpc RestoreFromBackup(RestoreFromBackupRequest) returns (RestoreFromBackupResponse);

  // GetBackups retrieves backup information
  rpc GetBackups(GetBackupsRequest) returns (GetBackupsResponse);
}

// BackupRequest requests a backup
message BackupRequest {
  // force_primary should typically be false, because backups should be done on
  // replicas to reduce load on the primary cluster. This is dangerous.
  bool force_primary = 1;

  // type indicates the type of backup that should be done. "full", "differential",
  // and "incremental" are examples that are appropriate for pgBackRest.
  string type = 2;
}

// BackupResponse contains the result of a backup operation
message BackupResponse {
  // backup_id uniquely identifies a backup and can be used to restore this
  // backup in the future.
  string backup_id = 1;
}

// RestoreFromBackupRequest requests a restore from a backup
message RestoreFromBackupRequest {
  // Backup to restore from. If this is empty, we restore from the latest
  // backup.
  string backup_id = 1;
}

// RestoreFromBackupResponse contains the result of a restore operation
message RestoreFromBackupResponse {
}

// GetBackupsRequest requests backup information
message GetBackupsRequest {
  uint32 limit = 1;
}

// GetBackupsResponse contains the list of backups
message GetBackupsResponse {
  repeated BackupMetadata backups = 1;
}

// BackupMetadata contains metadata about a backup
message BackupMetadata {
  string table_group = 1;
  string shard = 2;
  Status status = 3;
  string backup_id = 4;

  // Status represents the state of a backup
  enum Status {
    UNKNOWN = 0;
    INCOMPLETE = 1;
    COMPLETE = 2;
    // TODO: add VALID/INVALID states
  }
}
